[package]
name = "dioxus-ws"
version = "0.1.0"
authors = ["Niclas Hoyer <info@niclashoyer.de>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[patch.crates-io]
dioxus = { git = "https://github.com/DioxusLabs/dioxus.git", rev = "cb651a8" }

[dependencies]
dioxus = { version = "0.6.3", features = ["router", "fullstack"] }
futures = "0.3.31"
tokio = { version = "1.45.0", optional = true }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server", "dep:tokio"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
