[package]
name = "dioxus-ws"
version = "0.1.0"
authors = ["Niclas Hoyer <info@niclashoyer.de>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.0-alpha.0", features = ["router", "fullstack"] }
futures = "0.3.31"
# loro = { version = "1.5.1", path = "../../../Upstream/loro/crates/loro" }
loro = "1.5.1"
getrandom = { version = "^0.3.3" }
tokio = { version = "1.45.0", optional = true }
gloo-storage = "0.3.0"
futures-channel = "0.3.31"
async-broadcast = "0.7.2"
async-channel = "2.3.1"

[features]
default = ["web"]
web = ["dioxus/web", "getrandom/wasm_js"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server", "dep:tokio"]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
